--- a/page2.html
+++ b/page2.html
@@ -22,11 +22,17 @@
           <h2>Working through infrastructure stuff</h2>
         </header>
 
+        <section id="downloads" class="clearfix">
+          <a href="https://github.com/bheavner/aws_projects/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
+          <a href="https://github.com/bheavner/aws_projects/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
+          <a href="https://github.com/bheavner/aws_projects" id="view-on-github" class="button"><span>View on GitHub</span></a>
+        </section>
+
+        <hr>
+
         <section id="main_content">
           <h3>
 <a id="r-studiobioconductor-on-aws" class="anchor" href="#r-studiobioconductor-on-aws" aria-hidden="true"><span class="octicon octicon-link"></span></a>R studio/bioconductor on AWS.</h3>
-
-<p>Here's a link to <a href = "page2.html">Page 2</a>.</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
