starting rStudio notes

--- a/index.html
+++ b/index.html
@@ -24,9 +24,12 @@
 
         <section id="main_content">
           <h3>
-<a id="r-studiobioconductor-on-aws" class="anchor" href="#r-studiobioconductor-on-aws" aria-hidden="true"><span class="octicon octicon-link"></span></a>R studio/bioconductor on AWS.</h3>
-
-<p>Here's a link to <a href = "page2.html">Page 2</a>.</p>
+<a id="r-studiobioconductor-on-aws" class="anchor" href="#r-studiobioconductor-on-aws" aria-hidden="true"><span class="octicon octicon-link"></span></a>Various Projects</h3>
+<p>
+<ul>
+<li><a href = "rStudio_ECS.html">R studio/bioconductor on AWS</a></li>
+</ul>
+</p>
 
 <h3>
 <a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
